--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ChuckNorrisFactsAppMVVM</string>
+    <string name="app_name">Chuck Norris</string>
+    <string name="get_fact">get fact</string>
 </resources>
