--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Chuck Norris</string>
     <string name="get_fact">get fact</string>
+    <string name="no_connection_message">No Internet connection</string>
+    <string name="service_unavailable_message">Service is unavailable</string>
 </resources>
