- 005 RETROFIT added and bullshit code eliminated (still no coroutines)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="get_fact">get fact</string>
     <string name="no_connection_message">No Internet connection</string>
     <string name="service_unavailable_message">Service is unavailable</string>
+    <string name="chuck_norris">chuck_norris</string>
+    <string name="wanna_get_some_interesting_fact_about_chuck_norris">Wanna get some interesting fact about Chuck Norris?</string>
+    <string name="so_press_the_button_then">So, press the button, then!</string>
 </resources>
