- 007 refactoring but still no coroutines

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="chuck_norris">chuck_norris</string>
     <string name="wanna_get_some_interesting_fact_about_chuck_norris">Wanna get some interesting fact about Chuck Norris?</string>
     <string name="so_press_the_button_then">So, press the button, then!</string>
-    <string name="show_favorite_joke">show favorite joke</string>
+    <string name="show_favorite_joke">favorite fact</string>
+    <string name="icon_favorite">icon_favorite</string>
 </resources>
